recursion.lessons.recursion.koch.SquareKoch.scala.error
SquareKoch:19: error: not found: value snowSide
	snowSide(levels-1,length/3)
        ^SquareKoch:21: error: not found: value snowSide
	snowSide(levels-1,length/3)
        ^SquareKoch:23: error: not found: value snowSide
	snowSide(levels-1,length/3)
        ^SquareKoch:25: error: not found: value snowSide
	snowSide(levels-1,length/3)
        ^